--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
   }
 }
 
+
+.form-input {
+  padding: 5px;
+}
+.button {
+  padding: 10px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
