--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,46 @@
 .form-input {
   padding: 5px;
 }
-.button {
+
+.button-container {
   padding: 10px;
 }
+
+.button:hover,
+.button:active {
+  background-color: #FFFFFF;
+  background-position: 0 0;
+  color: #00a946;
+}
+
+.button:active {
+  opacity: .5;
+}
+.button {
+  background: #00ac1d;
+  border: 1px solid #00ac1d;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
 .experience {
   display: flex;
 }
