--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@ a {
   padding-top: 25px;
   display: inline-block;
   text-align: center;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 6em;
 }
 .form-input {
   padding: 5px;
